--- a/src/component/navbar.css
+++ b/src/component/navbar.css
@@ -165,12 +165,26 @@
     cursor: pointer;
     font-size: 20px;
     color: white;
+    width: 1;
+    border-radius: 50%;
+    /* width: 50px; */
+    display: block;
+    width: 40px;
+    height: 40px;
+    background-color: white;
+    color: darkblue;
+    /* text-align: center; */
+    font-size: 21px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 10px;
   }
   
   .logout-box {
     display: none;
     position: absolute;
-    top: 95%;
+    top: 90%;
     left: 0;
     width: 120px;
     background-color: #f1f1f1;
