--- a/src/component/navbar.css
+++ b/src/component/navbar.css
@@ -50,7 +50,7 @@
 
 .footer{
     margin-top: 50px;
-    background-color: #4646f1;
+    background-color: #495057;
     color: white;
     padding: 10px;
 }
@@ -123,7 +123,7 @@
 
   .clearInput {
     position: relative;
-    left: 774px;
+    left: 98%;
     top: -33px;
     transform: translate(0, -50%);
     cursor: pointer;
@@ -178,7 +178,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-bottom: 10px;
+  
   }
   
   .logout-box {
@@ -197,6 +197,39 @@
     display: block;
   }
   
+
+  .footer-header{
+    text-align: center;
+    font-size: 20px;
+    font-weight: 800;
+    padding-top: 20px;
+  }
+
+  .language-button {
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    padding: 5px 10px;
+    cursor: pointer;
+    position: relative; /* To position the alternative language text */
+  }
+  
+  .alternative-language {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background-color: #007bff;
+    color: #fff;
+    display: none;
+    padding: 5px 10px;
+    border-radius: 5px;
+    transition: opacity 0.3s;
+  }
+  
+  .language-button:hover .alternative-language {
+    display: block;
+    opacity: 1;
+  }
 
 
 @media (max-width: 768px) {
