--- a/src/component/navbar.css
+++ b/src/component/navbar.css
@@ -18,6 +18,7 @@
     background-position: center;
     background-repeat: no-repeat;
     border-radius: 50%;
+    cursor: pointer;
 }
 
 .icons{
@@ -186,7 +187,6 @@
     position: absolute;
     top: 90%;
     left: 0;
-    width: 120px;
     background-color: #f1f1f1;
     border: 1px solid #ccc;
     padding: 10px;
@@ -212,6 +212,7 @@
     padding: 5px 10px;
     cursor: pointer;
     position: relative; /* To position the alternative language text */
+    border-radius: 5px;
   }
   
   .alternative-language {
@@ -231,7 +232,14 @@
     opacity: 1;
   }
 
+.navbar-collaps{
 
+}
+@media (max-width : 575px){
+  .navbar-collaps{
+    display: flex;
+  }
+}
 @media (max-width: 768px) {
     .formwrapper {
       width: 70%;
