--- a/src/component/navbar.css
+++ b/src/component/navbar.css
@@ -78,6 +78,11 @@
     opacity: 1;
   }
   
+  .singIn{
+    font-size: 15px;
+    padding: 3px;
+
+  }
 
   .FormContainer{
     display: flex;
@@ -141,6 +146,7 @@
   .login{
     font-size: 22px;
     font-weight: bolder;
+    text-align: center;
   }
 
 
@@ -232,8 +238,38 @@
     opacity: 1;
   }
 
-.navbar-collaps{
+.translater-selection{
+  width: 50px;
+  padding: 3px;
+}
 
+.cart {
+  position: relative;
+
+}
+
+.add-to-cart-button {
+  padding: 5px 10px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  border-radius: 50%;
+}
+
+.cart-badge {
+  position: absolute;
+  top: -10px;
+  right: 4px;
+  background-color: red;
+  color: white;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  font-size: 12px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 @media (max-width : 575px){
   .navbar-collaps{
